--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,64 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --background : #FCE6D3;
+  --green: #b7e2c6;
+  --blue: #B4E9FB;
+  --pink: #DEC0E4;
+  --light-pink: #FFR1F9;
+  --peach: #FFDDCA;
+  --red: #FFB7C3;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+body{
+  background-image: url("./assets/background.jpg");
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 20px;
+  color: var(--green);
+  text-shadow: 1px 2px 2px #555;
+  justify-content: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+img{
+  display: block;
+  margin: auto;
+  width: 30vw;
+  border-radius: 100%;
+  box-shadow: 1px 2px 20px #bbb;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button{
+  color: var(--background);
+  text-shadow: 1px 2px 2px #555; 
+  border-radius: 50%;
+  padding: 1vw 3vw;
+  margin: 2vw 4vw;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button:hover{
+  color: #ddd;
+}
+
+#no_button{
+  background-color: var(--red);
+  border-color: crimson;
+}
+
+#no_button:hover{
+  background-color: #f3a2af;
+}
+
+#no_button:active{
+  background-color: #f993a4;
+}
+
+#yes_button{
+  background-color: var(--green);
+  border-color: aquamarine;
+}
+
+#yes_button:hover{
+  background-color: #9ae7b5;
+}
+
+#yes_button:active{
+  background-color: #62d68b;
 }
